--- a/main.html
+++ b/main.html
@@ -102,7 +102,7 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="display-t">
               <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                <h1>Krupa &amp; Indebir</h1>
+                <h1>Krupa &amp; Indibir</h1>
                 <h2>We Are Getting Married</h2>
                 <div class="simply-countdown simply-countdown-one"></div>
                 <p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
@@ -544,29 +544,6 @@
         </div>
       </div>
     </div>
-  
-    <footer id="fh5co-footer" role="contentinfo">
-      <div class="container">
-  
-        <div class="row copyright">
-          <div class="col-md-12 text-center">
-            <p>
-              <small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-              <small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
-            </p>
-            <p>
-              <ul class="fh5co-social-icons">
-                <li><a href="#"><i class="icon-twitter"></i></a></li>
-                <li><a href="#"><i class="icon-facebook"></i></a></li>
-                <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                <li><a href="#"><i class="icon-dribbble"></i></a></li>
-              </ul>
-            </p>
-          </div>
-        </div>
-  
-      </div>
-    </footer>
     </div>
   
     <div class="gototop js-top">
