--- a/main.html
+++ b/main.html
@@ -70,7 +70,7 @@
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="about.html">Story</a></li>
               <li class="has-dropdown">
-                <a href="services.html">Services</a>
+                <a href="services.html">Events</a>
                 <ul class="dropdown">
                   <li><a href="#">Web Design</a></li>
                   <li><a href="#">eCommerce</a></li>
@@ -79,7 +79,7 @@
                 </ul>
               </li>
               <li class="has-dropdown">
-                <a href="gallery.html">Gallery</a>
+                <a href="gallery.html">Bridal Party</a>
                 <ul class="dropdown">
                   <li><a href="#">HTML5</a></li>
                   <li><a href="#">CSS3</a></li>
@@ -102,7 +102,7 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="display-t">
               <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                <h1>Krupa &amp; Indibir</h1>
+                <h1>Krupa &amp; Inderbir</h1>
                 <h2>We Are Getting Married</h2>
                 <div class="simply-countdown simply-countdown-one"></div>
                 <p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
