--- a/main.html
+++ b/main.html
@@ -105,7 +105,7 @@
                 <h1>Krupa &amp; Inderbir</h1>
                 <h2>We Are Getting Married</h2>
                 <div class="simply-countdown simply-countdown-one"></div>
-                <p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
+                <p><a href="#" class="btn btn-default btn-sm">View Invitation</a></p>
               </div>
             </div>
           </div>
