--- a/main.html
+++ b/main.html
@@ -28,6 +28,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/gcq5fcb.css">
     
     <!-- Animate.css -->
     <link rel="stylesheet" href="assets/css/animate.css">
@@ -63,7 +64,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-2">
-            <div id="fh5co-logo"><a href="index.html">Wedding<strong>.</strong></a></div>
+            <div id="fh5co-logo"><a href="index.html"> I + K </a></div>
           </div>
           <div class="col-xs-10 text-right menu-1">
             <ul>
@@ -102,7 +103,7 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="display-t">
               <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                <h1>Krupa &amp; Inderbir</h1>
+                <h1>Inderbir &amp; Krupa</h1>
                 <h2>We Are Getting Married</h2>
                 <div class="simply-countdown simply-countdown-one"></div>
                 <p><a href="#" class="btn btn-default btn-sm">View Invitation</a></p>
