--- a/main.html
+++ b/main.html
@@ -26,9 +26,8 @@
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" />
 
-    <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.typekit.net/gcq5fcb.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+                
     
     <!-- Animate.css -->
     <link rel="stylesheet" href="assets/css/animate.css">
