--- a/main.html
+++ b/main.html
@@ -27,6 +27,7 @@
     <meta name="twitter:card" content="" />
 
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/amalfi-coast" rel="stylesheet">
                 
     
     <!-- Animate.css -->
